# src/main/kotlin/com/example/kotlinspringbootsample/presentation/order/response/PayOrderResponse.kt
@@ -1,0 +1,15 @@
+package com.example.kotlinspringbootsample.presentation.order.response
+
+enum class PayOrderResponseStatus {
+    PAID,
+    PROCESSING,
+    CANCELING,
+    CANCELED
+}
+
+data class PayOrderResponse(
+    val status: PayOrderResponseStatus,
+    val message: String,
+    val pollingUrl: String,
+    val order: OrderResponse
+)
